test/errors/class_redeclaration.correct
error: class_redeclaration.li:4:7: class 'Test' is already declared
│ class Test {
│ ~~~~~~~~~~~~
│       ^
